Upgrade Mockito 3 to 4 and remove PowerMock (#75)